# chrono-retriever

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  start_retriever.bat
data/: activities_2022_05_20.json
src/chrono/: main.py
src/chrono/backend/: main.py  schema.graphql
src/chrono/backend/db_connectors/: db_connector.py  mongo_db_connector.py
src/chrono/backend/mutations/: windows_state_resolver.py
src/chrono/backend/queries/: activity_stats_resolver.py  aggregate_resolver.py  aggregation_resolver.py  windows_states_resolver.py
src/chrono/backend/singletons/: db_connector.py  mongo.py
src/chrono/backend/types/: timestamp.py
src/chrono/feature_extractors/: all_of_feature_extractor.py  factory.py  feature_extractor.py  one_of_feature_extractor.py  regex_feature_extractor.py  static_tags_feature_extractor.py
src/chrono/model/: activity_regex_filter.py  activity_stats.py  feature_extractors_descriptors.py  window_info.py  windows_state.py
src/chrono/retrievers/: window_specializer.py  windows_state_retriever.py
src/chrono/utils/: to_jsonable_dict.py
tests/: feature_extractors.py  test.yml
