[tool.poetry]
name = "chrono_retriever"
version = "0.1.0"
description = ""
authors = ["tosa95 <davide.tosatto95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGetWindow = { git = "https://github.com/Tosa95/PyGetWindow", branch = "master" }
pydantic = "^1"
psutil = "^5"
ariadne = "^0.15"
uvicorn = "*"
pymongo = "^4"
python-graphql-client = "^0.4"
fastapi = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
